# PaddleRec

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  BCLOUD  BCLOUD.paddle  CMakeLists.txt  README.md  README_CN.md  README_EN.md  README_en.md  build.sh  ci.yml  ci_test.txt  contributor.md  log  paddlerec.py  publish_include.sh  readme.md  release.bcloud  requirements.txt  run.py  setup.cfg  setup.py  test  test_code_style.py
core/: factory.py  layer.py  metric.py  model.py  reader.py  trainer.py
datasets/: readme.md
demo/: ctr-dnn_train.yaml  user_define_trainer.py
doc/: benchmark.md  collective_mode.md  contribute.md  contribute_code.md  custom_dataset_reader.md  custom_reader.md  design.md  development.md  distributed_train.md  dygraph_mode.md  faq.md  feature_importance.md  fleet_mode.md  inference.md  introduction.md  local_train.md  metrics.md  model.md  model_develop.md  model_list.md  online_learning.md  online_trainer.md  onoff_diff.md  optimization_model.md  pre_train_model.md  predict.md  ps_background.md  quick_start.md  rec_background.md  requirements.txt  serving.md  slot_reader.md  static_mode.md  task_relation_analyse.md  train.md  trainer_develop.md  visualization.md  whole_process.md  yaml.md
docs/: markdown2rst.py  model.md  quick_start.md  trainer_develop.md
examples/: __init__.py  ctr-dnn_train.yaml  ctr-dnn_train_cluster.yaml  ctr-dnn_train_single.yaml  train.py
feed/: CMakeLists.txt  apply_feed_code.sh
fleet_rec/: run.py
fleetrec/: check.py  run.py
kagle/: kagle_dataset.py  kagle_fs.py  kagle_layer.py  kagle_metric.py  kagle_model.py  kagle_table.py  kagle_trainer.py  kagle_util.py
metrics/: auc_metrics.py  base.py
paddle/fluid/feed/pybind/: CMakeLists.txt  expand_api.cc  pybind.cc
paddle/fluid/train/custom_trainer/feed/: .clang-format  CMakeLists.txt  main.cc  trainer_context.h
paddle/fluid/train/custom_trainer/feed/accessor/: accessor.h  dense_input_accessor.cc  epoch_accessor.cc  epoch_accessor.h  input_data_accessor.h  label_input_accessor.cc  me  sparse_input_accessor.cc  weights_input_accessor.cc
paddle/fluid/train/custom_trainer/feed/common/: CMakeLists.txt  bthread_task_runner.cc  bthread_task_runner.h  pipeline.h  pslib_warpper.cc  pslib_warpper.h  registerer.cc  registerer.h  runtime_environment.cc  runtime_environment.h  scope_helper.h  yaml_helper.h
paddle/fluid/train/custom_trainer/feed/conf/: env.conf  gflags.conf  ps_table_config  trainer.yaml
paddle/fluid/train/custom_trainer/feed/dataset/: abacus_data_reader.cc  archive_data_reader.cc  data_reader.cc  data_reader.h  dataset.cc  dataset.h  dataset_container.cc  dataset_container.h
paddle/fluid/train/custom_trainer/feed/executor/: executor.cc  executor.h  multi_thread_executor.cc  multi_thread_executor.h
paddle/fluid/train/custom_trainer/feed/io/: auto_file_system.cc  file_system.cc  file_system.h  hadoop_file_system.cc  local_file_system.cc  shell.cc  shell.h
paddle/fluid/train/custom_trainer/feed/model/: epoch_donefile.txt
paddle/fluid/train/custom_trainer/feed/monitor/: auc_monitor.cc  auc_monitor.h  cost_monitor.cc  cost_monitor.h  monitor.h
paddle/fluid/train/custom_trainer/feed/process/: CMakeLists.txt  data_set_process.h  init_env_process.cc  init_env_process.h  learner_process.cc  learner_process.h  process.cc  process.h
paddle/fluid/train/custom_trainer/feed/scripts/: compake_runable_package.sh  create_programs.py  example.py  join.py  start_feed_trainer.sh  submit_mpi.sh  update.py
paddle/fluid/train/custom_trainer/feed/scripts/model/example/: main_program  model.yaml  startup_program  test_program
paddle/fluid/train/custom_trainer/feed/scripts/model/join/: inference_program  inference_program.pbtxt  main_program  main_program.pbtxt  model.yaml  startup_program  startup_program.pbtxt  test_program  test_program.pbtxt
paddle/fluid/train/custom_trainer/feed/scripts/model/update/: inference_program  inference_program.pbtxt  main_program  main_program.pbtxt  model.yaml  startup_program  startup_program.pbtxt  test_program  test_program.pbtxt
paddle/fluid/train/custom_trainer/feed/shuffler/: shuffler.cc  shuffler.h
paddle/fluid/train/custom_trainer/feed/temp/: feed_trainer.cpp
paddle/fluid/train/custom_trainer/feed/tool/: gdbinit  xbox_decompressor_mf.awk
paddle/fluid/train/custom_trainer/feed/unit_test/: main.cc  test_archive_dataitem.cc  test_create_programs.cc  test_datareader.cc  test_datareader_omp.cc  test_executor.cc
tools/inference/cpp/: .gitignore  CMakeLists.txt  README.md  all_vars.txt  all_vars2.txt  all_vars_small_model.txt  main.cpp  run.sh  user.flags
tools/inference/cpp/all_model_params/model_params/: __model__  embedding  linear_0.b_0  linear_1.b_0  linear_1.w_0  linear_2.w_0  linear_3.b_0  linear_3.w_0  linear_5.b_0
tools/inference/cpp/cube_app/: seq_reader
tools/inference/cpp/cube_app/conf/: cube.conf
tools/inference/cpp/cube_app/data/meta_info/: 0_0_0_0.json
tools/inference/cpp/data/: demo_10_300  demo_10_uint32
tools/inference/cpp/include/: cube_api.h  cube_api_bvar.h  cube_cli.h  data_feed.h  error.h  infer.h  meta.h  single.h  utils.h  xbox_pb_deconverter.h
tools/inference/cpp/new_model/: __model__  linear_2.b_0  linear_4.b_0  linear_4.w_0  linear_5.w_0
tools/inference/cpp/proto/: control.pb.cc  control.proto  cube.pb.cc  cube.proto  miomf_result.pb.cc  miomf_result.pb.h
tools/inference/cpp/small_model/: __model__  linear_0.b_0  linear_1.b_0  linear_1.w_0  linear_2.b_0  linear_2.w_0  linear_3.b_0  linear_3.w_0
tools/inference/cpp/src/: CMakeLists.txt  cube_api.cpp  cube_cli.cpp  data_feed.cc  infer.cpp  utils.cpp  xbox_pb_deconverter.cpp
tools/inference_c++/: CMakeLists.txt  criteo_reader.h  inference.cpp  readme.md  run.sh  safe_queue.h
utils/: envs.py  (+3 more)
(+8921 files in other folders)
